--- a/public/styles/lx-pt-carbon.css
+++ b/public/styles/lx-pt-carbon.css
@@ -33,6 +33,8 @@
   --row-size: 3rem;
   --nav-row-size: 3rem;
   --input-size: 2.5rem;
+  --date-size: 10.5rem;
+  --date-time-size: 14rem;
   --notification-size: 28rem;
   --body-column-size: 1300px;
   --tile-column-size: 20rem;
